# tilkal

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Form.cpp  Form.h  README  TODO  Tilkal.sln  Tilkal.vcproj  Tilkal.vcxproj  Tilkal.vcxproj.filters  ai.cpp  ai.h  all.h  ban.h  bans.cpp  bans.h  chaine.cpp  client.cpp  client.h  clients.cpp  clients.h  commands.cpp  def.prj  definitions.cpp  door.cpp  door.h  doors.cpp  doors.h  event.h  events.cpp  events.h  forbnick.h  forbnicks.cpp  forbnicks.h  hache.h  httpclient.cpp  httpclient.h  myarray.h  (+32 more)
ai/: beggar.cpp  beggar.h  shopkeeper.cpp  shopkeeper.h  standard.cpp  standard.h
createur/: clsacpp.pl  createur.cls  createur.cpp  createur.h  test.m  test.xml
modules/: tilkal.bans.ixx
text/: commande_get.hlp  death.txt  log.txt  motd.txt  rules_authors.txt  rules_immort.txt  rules_start.txt  welcome.txt
www/: index.html  interface.html  interface.js  style.css
